# magic_vtable

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: constexpr_vtable.hpp  magic_vtable.hpp
test/: CMakeLists.txt  test.cpp
